syntax = "proto3";

package vartrack.v1;

import "vartrack/v1/models/secret_managers/vault.proto";
import "buf/validate/validate.proto";

message SecretManager {
  oneof config {
    option (buf.validate.oneof).required = true;
    VaultConfig vault = 1;
  }
}
